--- a/BuildService/BuildService.csproj
+++ b/BuildService/BuildService.csproj
@@ -37,6 +37,7 @@
     </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0182" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
 	</ItemGroup>
