--- a/BuildService.Client.WinForms/BuildService.Client.WinForms.csproj
+++ b/BuildService.Client.WinForms/BuildService.Client.WinForms.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
+  </ItemGroup>
+
 </Project>
