--- a/BuildService.Client.WinForms/BuildService.Client.WinForms.csproj
+++ b/BuildService.Client.WinForms/BuildService.Client.WinForms.csproj
@@ -13,7 +13,12 @@
 		<TransformOutOfDateOnly>false</TransformOutOfDateOnly>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
 	<GenerateProgramFile>false</GenerateProgramFile>
+	<ApplicationIcon>wrench-screwdriver.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="wrench-screwdriver.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0182" />
@@ -42,6 +47,11 @@
     </None>
   </ItemGroup>
 <ItemGroup>
+<Compile Update="Properties\Resources.Designer.cs">
+  <DesignTime>True</DesignTime>
+  <AutoGen>True</AutoGen>
+  <DependentUpon>Resources.resx</DependentUpon>
+</Compile>
 <Compile Update="Properties\VersionAutoIncrement.cs">
 <DesignTime>True</DesignTime>
 <AutoGen>True</AutoGen>
@@ -50,6 +60,12 @@
 </ItemGroup>
 <ItemGroup>
   <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+</ItemGroup>
+<ItemGroup>
+  <EmbeddedResource Update="Properties\Resources.resx">
+    <Generator>ResXFileCodeGenerator</Generator>
+    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+  </EmbeddedResource>
 </ItemGroup>
 <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v17.0\TextTemplating\Microsoft.TextTemplating.targets" />
 
